# life-analytics

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOYMENT.md  IDEAS.md  Makefile  QA_TEST_PLAN.md  README.md  SHOULD_FIX.md  SPEC.md  db_schema.puml  docker-compose.yml  run.sh
backend/: .coverage  Dockerfile  correlation.toml  life_analytics.db  pyproject.toml  requirements-test.txt  requirements.txt  venv
backend/app/: auth.py  correlation_blacklist.py  correlation_config.py  database.py  distribution.py  encryption.py  formula.py  main.py  metric_helpers.py  migrations.py  schemas.py  seed.py  source_key.py  timing.py
backend/tests/: conftest.py  test_analytics_correlation_api.py  test_analytics_streak_unit.py  test_analytics_trends_api.py  test_auth_api.py  test_auth_unit.py  test_auto_source_registry_unit.py  test_aw_service_unit.py  test_categories_api.py  test_checkpoint_api.py  test_checkpoint_unit.py  test_checkpoints_api.py  test_convert_bool_to_enum.py  test_convert_enum_to_scale.py  test_convert_preview.py  test_convert_scale_to_scale.py  test_convert_validation.py  test_correlation_blacklist.py  test_correlation_calculator_unit.py  test_correlation_config_unit.py  test_correlation_engine_unit.py  test_correlation_method_unit.py  test_daily_api.py  test_daily_helpers_unit.py  test_distribution_api.py  test_distribution_unit.py  test_encryption.py  test_entries_api.py  test_experiment_allday_vs_interval.py  test_export_import_api.py  test_formula.py  test_free_checkpoints_api.py  test_free_intervals_api.py  test_insights_api.py  test_layout_api.py  (+18 more)
(+95 files in other folders)
